# gsx

./: .gitignore  .releaserc.json  CHANGELOG.md  CODEOWNERS  Makefile  README.md  gcpx.py  pyproject.toml  release.sh
.github/workflows/: ci.yml  manual-release.yml  publish.yml  release.yml
src/: gsx.py
tests/: gsx_test.py
