[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gsx"
description = "A Python decorator to push data to Google Cloud Platform"
version = "1.0.0"
requires-python = ">=3.10"
dependencies = [
    "google-cloud-storage",
    "google-auth",
]



[tool.setuptools]
package-dir = {"" = "src"}

[tool.uv]
dev-dependencies = [
    "pandas>=2.2.3",
    "pyarrow>=18.0.0",
    "pytest-mock>=3.14.0",
    "pytest>=8.3.3",
    "ruff>=0.7.3",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-mock", "ruff"]
